--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
     "typescript": "~3.2.4"
   },
   "engines": {
-    "node": ">= ^8.9.4",
-    "npm": ">= 5.6.0"
+    "node": "10.14.2",
+    "npm": "6.4.1"
   }
 }
