--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
   "license": "https://coreui.io/pro/license/",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build --prod --aot --buildOptimizer --commonChunk --vendorChunk --optimization --progress",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --aot -prod"
   },
   "private": true,
   "dependencies": {
@@ -50,6 +51,7 @@
     "chart.js": "^2.7.3",
     "core-js": "^2.6.5",
     "date-fns": "^1.30.1",
+    "express": "^4.17.1",
     "flag-icon-css": "^3.3.0",
     "font-awesome": "^4.7.0",
     "moment": "^2.24.0",
@@ -62,6 +64,7 @@
     "ngx-moment": "^3.4.0",
     "ngx-perfect-scrollbar": "^7.2.1",
     "ngx-quill": "^4.6.12",
+    "path": "^0.12.7",
     "quill": "^1.3.6",
     "rxjs": "^6.4.0",
     "rxjs-compat": "^6.4.0",
@@ -71,6 +74,7 @@
     "ts-helpers": "^1.1.2",
     "tsickle": "^0.34.3",
     "tslib": "^1.9.3",
+    "typescript": "~3.2.4",
     "zone.js": "^0.8.29"
   },
   "devDependencies": {
@@ -82,6 +86,7 @@
     "@types/jasminewd2": "^2.0.6",
     "@types/node": "^11.10.4",
     "codelyzer": "^4.5.0",
+    "enhanced-resolve": "^3.3.0",
     "jasmine-core": "^3.3.0",
     "jasmine-spec-reporter": "^4.2.1",
     "karma": "^4.0.1",
@@ -95,7 +100,7 @@
     "typescript": "~3.2.4"
   },
   "engines": {
-    "node": ">= ^8.9.4",
-    "npm": ">= 5.6.0"
+    "node": "10.14.2",
+    "npm": "6.4.1"
   }
 }
